Update 0135 re reciprocal sharing ideas

--- a/0131-2023-08-24.md
+++ b/0131-2023-08-24.md
@@ -15,7 +15,7 @@
     4.  50MHz/new-OpenLane/default -- *should fail due to yosys-abc bug*
     5.  Repeat the above for 8x2 tiles too, because our design area *might* blow out in these subsequent steps.
 2.  Repeat the above 5 (actually 8) steps for each of these following steps -- maybe in some of them, the yosys-abc bug will be hidden?
-3.  Implement SPI access to `pov`, or even byte-wide access, because we need to see if this blows out the floorplan (e.g. by preventing logic reduction in the reciprocal and other multipliers). Assuming it's OK, implement use of it in the sim, too.
+3.  Implement SPI access to `pov`, or even byte-wide access, because we need to see if this blows out the floorplan (e.g. by preventing logic reduction in the reciprocal and other multipliers). Assuming it's OK, implement use of it in the sim, too. [**DONE** in 0135](./0135-2023-08-28.md#fixed-pov-spi-7aae611) -- it no longer fits in 4x2, but hopefully the improvements below will then help...
 4.  Implement reciprocal sharing in `wall_tracer`, and prove that it works... i.e. both that `make clean_sim` still works as expected (hopefully also when `pov` is being sent rotated views), and that it can synth.
 5.  Move `height_scaler` reciprocal into `wall_tracer` FSM.
 
