--- a/0133-2023-08-26.md
+++ b/0133-2023-08-26.md
@@ -273,6 +273,7 @@ Based on [Visual Studio Code on Linux](https://code.visualstudio.com/docs/setup/
 
 ## Next steps
 
+*   `git config --global --edit`
 *   Simulation stuff, esp. Verilator and SDL. Look at READMEs for my various HDL projects.
 *   Fix Docker ability to run OpenLane GUI: https://github.com/algofoogle/journal/blob/master/0083-2023-05-23.md#:~:text=Meanwhile%2C%20I%27m%20going%20to%20try%20inspecting%20my%20above%20failed%20run%20with%20the%20OpenROAD%20GUI%20as%20follows
 *   Helpers for launching OpenLane docker containers, e.g. per: https://github.com/algofoogle/journal/blob/master/0127-2023-08-20.md#going-into-the-updated-openlane-3bc9d02-docker-container
