--- a/0135-2023-08-28.md
+++ b/0135-2023-08-28.md
@@ -140,8 +140,53 @@ Note also:
     Total                  1.18e+00   1.66e+00   7.32e-08   2.84e+00 100.0%
                             41.5%      58.5%       0.0%
     ```
+*   From `runs/wokwi/logs/synthesis/1-synthesis.log`:
+    ```
+    reciprocal params for Q12.12:  n1466=001774, n10012=001004, nSat=7FFFFF
+    ```
+*   Other oddities:
+    *   `1-synthesis.errors`: `ABC: Error: The network is combinational.` -- supposedly can be ignored.
+    *   `1-synthesis.warnings`: `ABC: Warning: Detected 2 multi-output gates (for example, "sky130_fd_sc_hd__fa_1").` -- ??
+    *   `2-sta.warnings`: `Warning: There are 16 unconstrained endpoints.`
 
 ## Next steps
 
-*   Sim could do with a view rotate option. Is there a cheating way we could just rotate the whole canvas without having to change the X/Y code?
 *   Fix synth warnings inc. `$rtoi` stuff.
+*   Reciprocal sharing. Thoughts:
+    *   If we were to get away with exactly 1 reciprocal, we need to work out the range of its possible inputs and outputs.
+    *   e.g. truncating 'facing' vector is definitely likely and would be effective, and *so far* the only other reciprocal
+        is the height_scaler which also only uses bits `2:-8`.
+    *   FSM update might look like this:
+        ```verilog
+        //SMELL: Ideally we want this shared_reciprocal to be outside of wall_tracer, so it doesn't 'belong'
+        // to any one module. If we do that, how do we control registered access to it? Or do we use a mux instead?
+        // I'd rather not have to tristate it, but maybe that would be needed...?
+        reg `F rcp_in, rcp_out;
+        wire rcp_sat;
+        wire rcp_abs = 1'b1; //SMELL: ??
+        reciprocal #(.M(`Qm),.N(`Qn)) shared_reciprocal (.i_data(rcp_in), .i_abs(rcp_abs), .o_data(rcp_out), .o_sat(rcp_sat));
+        ...
+        reg `F stepDistX, stepDistY;
+        ...
+        // Add new states between PREP and STEP, or blend them at the edges...
+        RCPX1: begin
+            rcp_in <= rayDirX;
+            state <= RCPX2;
+        end
+        RCPX2: begin
+            // This state is just here to give the reciprocal's large combo logic time to settle.
+            state <= RCPX3;
+        end
+        RCPX3: begin
+            //SMELL: This state is probably not necessary to keep separate from RCPY1,
+            // but I'm just considering it now because we have plenty of time and this might
+            // help avoid both setup and hold violations.
+            stepDistX <= rcp_out;
+            state <= RCPY1;
+        end
+        RCPY1: begin
+            rcp_in <= rayDirY;
+            ...
+        ```
+    *   NOTE: Power consumption should reduce because the reciprocal won't be frequently changeable now via SPI/POV.
+*   Sim could do with a view rotate option. Is there a cheating way we could just rotate the whole canvas without having to change the X/Y code?
