--- a/0135-2023-08-28.md
+++ b/0135-2023-08-28.md
@@ -2,7 +2,7 @@
 
 | Previous journal: | Next journal: |
 |-|-|
-| [**0134**-2023-08-27.md](./0134-2023-08-27.md) | *Next journal TBA* |
+| [**0134**-2023-08-27.md](./0134-2023-08-27.md) | [**0136**-2023-08-29.md](./0136-2023-08-29.md) |
 
 # raybox-zero sim keyboard/mouse control and partial POV SPI synth success
 
@@ -190,3 +190,7 @@ Note also:
         ```
     *   NOTE: Power consumption should reduce because the reciprocal won't be frequently changeable now via SPI/POV.
 *   Sim could do with a view rotate option. Is there a cheating way we could just rotate the whole canvas without having to change the X/Y code?
+
+## Notes
+
+*   Is it better to have `rcp_in` as a register, or driven by a mux?
