Minor update for 0136

--- a/0136-2023-08-29.md
+++ b/0136-2023-08-29.md
@@ -88,6 +88,7 @@ Max. expected clocks needed for tracing:
 
 ## Notes
 
+*   To use `make clean_sim_random` on my Legion 7 Win 11 Home laptop, I had to configure the 'Windows Time' service to be auto-start (`Automatic (Delayed Start)`). This is because the script `winrand.bat` relies on it to generate a random number. A bit silly, really!
 *   Combo 3 at 8x2 got stuck running way too long on detailed routing (I think over 45mins before I killed it). This was its log:
     <details><summary>Click to show log...</summary>
 
