Update 0136: Adding stats before shared_reciprocal

--- a/0136-2023-08-29.md
+++ b/0136-2023-08-29.md
@@ -43,6 +43,19 @@ These are essentially the really naive states I settled on (though I used differ
     *   Modify this to use rcp to get size from vdist.
 *   More states required before hitting LINE_READY (which is when we present output).
 
+## Stats with wall_tracer reset before shared rcp
+
+### [`45564e3`](https://github.com/algofoogle/tt04-raybox-zero/commit/45564e3?diff=split)
+| | 4x2:1 | 8x2:1 | 4x2:2 | 8x2:2 | 4x2:3 | 8x2:3 | 4x2:4 | 8x2:4 |
+|-|-:|-:|-:|-:|-:|-:|-:|-:|
+| cells_pre_abc | 29,767 | 29,767 | 29,767 | 29,767 | 29,821 | 29,821 | 29,767 | 29,767 |
+| TotalCells | 18,157 | 41,510 | 18,157 | 41,676 | 0 | 0 | 14,659 | 39,576 |
+| suggested_mhz | 24.39 | 25.00 | 47.62 | 38.12 | 47.62 | 47.62 | 47.62 | 34.72 |
+| logic_cells | 15,837 | 16,500 | 15,837 | 16,526 | 12,387 | 12,387 | 12,339 | 12,972 |
+| utilisation_% | 105.72 | 52.47 | 105.72 | 52.47 | 84.64 | 42.01 | 82.28 | 40.83 |
+| wire_length_um | 0 | 533,398 | 0 | 535,363 | 0 | 0 | 0 | 367,744 |
+
+
 ## Stats for first shared_reciprocal attempt
 
 ### [tt04-rbz `4122c8a`](https://github.com/algofoogle/tt04-raybox-zero/commit/4122c8a?diff=split) with wall_tracer from [raybox-zero `bf2ffed`](https://github.com/algofoogle/raybox-zero/commit/bf2ffed27f0e1b1f662e05f359864ddcd55a4080)
