Minor updates for 0137

--- a/0050-2020-08-03.md
+++ b/0050-2020-08-03.md
@@ -1,5 +1,9 @@
 # 3 Aug 2020
 
+| Previous journal: | Next journal: |
+|-|-|
+| [**0049**-2020-08-02.md](./0049-2020-08-02.md) | [**0051**-2020-08-04.md](./0051-2020-08-04.md) |
+
 ## Verilator
 
 Let's built event-driven simulation models, in C++, from Verilog, using Verilator!
