--- a/0051-2020-08-04.md
+++ b/0051-2020-08-04.md
@@ -1,5 +1,9 @@
 # 4 Aug 2020
 
+| Previous journal: | Next journal: |
+|-|-|
+| [**0050**-2020-08-03.md](./0050-2020-08-03.md) | [**0052**-2020-08-05.md](./0052-2020-08-05.md) |
+
 ## More Verilator
 
 Loosely following [this tutorial](https://zipcpu.com/blog/2017/06/21/looking-at-verilator.html), I did the following, in [`t01b`]...
