--- a/0052-2020-08-05.md
+++ b/0052-2020-08-05.md
@@ -1,5 +1,9 @@
 # 5 Aug 2020
 
+| Previous journal: | Next journal: |
+|-|-|
+| [**0051**-2020-08-04.md](./0051-2020-08-04.md) | [**0053**-2020-08-06.md](./0053-2020-08-06.md) |
+
 ## A little more Verilator
 
 Created [`t01c`](https://github.com/algofoogle/sandpit/tree/master/fpga/verilator/test01/t01c). It's mostly the same as `t01b` but has an internal `overflow` register. This gets set when it counts from 255 to 0, but otherwise is unused. We get a warning to that effect:
