--- a/0053-2020-08-06.md
+++ b/0053-2020-08-06.md
@@ -1,5 +1,9 @@
 # 6 Aug 2020
 
+| Previous journal: | Next journal: |
+|-|-|
+| [**0052**-2020-08-05.md](./0052-2020-08-05.md) | [**0054**-2020-08-07.md](./0054-2020-08-07.md) |
+
 ## Yet more Verilator
 
 I made [`t01d`](https://github.com/algofoogle/sandpit/tree/master/fpga/verilator/test01/t01d):
