--- a/0054-2020-08-07.md
+++ b/0054-2020-08-07.md
@@ -1,5 +1,9 @@
 # 7 Aug 2020
 
+| Previous journal: | Next journal: |
+|-|-|
+| [**0053**-2020-08-06.md](./0053-2020-08-06.md) | [**0055**-2020-08-08.md](./0055-2020-08-08.md) |
+
 ## Still poking around with Verilator
 
 *   I don't think it's possible to manipulate Verilog `parameter`s with Verilator. Probably not an issue, though: I guess a higher-level Verilog module in the hierarchy could set parameters of submodules, as it sees fit, and then the Verilator-based testbench would just manipulate the signals it cares about to drive things.
