--- a/0056-2020-08-09.md
+++ b/0056-2020-08-09.md
@@ -1,5 +1,9 @@
 # 9 Aug 2020
 
+| Previous journal: | Next journal: |
+|-|-|
+| [**0055**-2020-08-08.md](./0055-2020-08-08.md) | [**0057**-2020-08-10.md](./0057-2020-08-10.md) |
+
 ## Verilator VGA signal generation
 
 I've started adapting my code from [`XC9572XL/test09/t09d`](https://github.com/algofoogle/sandpit/tree/master/fpga/XC9572XL/test09/t09d) (VGA tile renderer) to work with Verilator, to see if I can make it output at least one frame of data to display in [Eric Eastwood's VGA Simulator](https://ericeastwood.com/lab/vga-simulator/). This is in [`t02a`](https://github.com/algofoogle/sandpit/tree/master/fpga/verilator/test02/t02a).
