--- a/0137-2023-08-30.md
+++ b/0137-2023-08-30.md
@@ -10,6 +10,8 @@
 
 *   Moved height_scaler rcp into wall_tracer and made it use shared_reciprocal.
 *   Ran harden_test and it got so close to fitting. See [below](#stats-with-height_scaler-absorbed-into-wall_tracer)
+*   Implemented optional `` `define TRACE_STATE_DEBUG `` which visually represents the tracing state of each line on-screen.
+*   Fixed a minor issue with map ROM size parameters.
 
 ## Stats with height_scaler absorbed into wall_tracer
 
@@ -30,22 +32,24 @@ Summary:
 
 ## Next steps
 
+*   Try hardening with debug signals controlling debug overlays, to see if they notably increase area.
 *   Cut back states. There are too many.
 *   Cut back facing/vplane vectors; SPI doesn't need to supply higher order bits.
 *   See if we can reduce multipliers.
 *   Are there some combo chains which could actually now be registered (for faster timing)?
 *   Try a bigger map ROM. Currently it's only 16x16. Mind you, that's small enough to store in local registers.
 *   Add in `tex` and see how much it blows things out.
-*   Try to measure tracer stages: show on-screen with a different colour for each stage.
-*   Compare cell count when using rcp_in as a register instead of mux.
+*   Compare cell count when using rcp_in as a register instead of mux -- it might actually be worse by turning into both a register AND a mux in synth.
 *   Combine TraceStep and TraceTest if using combo map ROM. No good if using external ROM.
+*   Try to plan a minimal external ROM interface that doesn't suffer bad SPI speed issues.
+*   Consider designing an extra TT04 tile that just provides a ROM interface of the kind we need (col/row inc/dec).
 *   Is there a way to avoid `trackDistY-stepDistY` by holding a previous value?
 *   Move the shared_reciprocal OUT of wall_tracer
 *   Try to get a sense of how big each component/module/register/expression is... harden them all separately or black-box them?
 
 ## Notes
 
-*   Include an option for wall_tracer to signal if it is not finished, or otherwise a way to abort it? Handling that might mean repeating the last trace value for the current line, allowing optionally up to 1 extra line of tracing time.
+*   Include an option for wall_tracer to signal if it has not finished, or otherwise a way to abort it? Handling that might mean repeating the last trace value for the current line, allowing optionally up to 1 extra line of tracing time.
 *   Experiment with vdist input to rcp... if we cap it THERE to the bit range we expect, does it already help optimisation?
 *   Check if there are any registers we can recycle for other purposes, e.g. when the current state no longer needs them. vdist comes to mind; it could be rcp_in (and in fact actually IS a shared reciprocal input at one point).
 
