--- a/0055-2020-08-08.md
+++ b/0055-2020-08-08.md
@@ -1,5 +1,9 @@
 # 8 Aug 2020
 
+| Previous journal: | Next journal: |
+|-|-|
+| [**0054**-2020-08-07.md](./0054-2020-08-07.md) | [**0056**-2020-08-09.md](./0056-2020-08-09.md) |
+
 I downloaded [GTKWave for Windows](https://sourceforge.net/projects/gtkwave/files/) (specifically [`gtkwave-3.3.100-bin-win32.zip`](https://sourceforge.net/projects/gtkwave/files/gtkwave-3.3.100-bin-win32/gtkwave-3.3.100-bin-win32.zip/download)) and extracted to my system. `bin/gtkwave.exe` is the program to run.
 
 When it launches, go to `File => Open New Tab` and choose the `trace.vcd` file created by doing `make run` in `t01e`. Then expand `TOP` to select `example`, select all the signals it lists below (except for `SIZE` in my case), and click `Append`.
