Update 0137 with stats from debug logic baked in

--- a/0137-2023-08-30.md
+++ b/0137-2023-08-30.md
@@ -15,7 +15,7 @@
 
 ## Stats with height_scaler absorbed into wall_tracer
 
-### Updated wall_tracer and rbzero in [tt04-rbz `45564e3`](https://github.com/algofoogle/tt04-raybox-zero/commit/45564e3?diff=split)
+### [tt04-rbz@shared_rcp `3ea9e0e`](https://github.com/algofoogle/tt04-raybox-zero/commit/3ea9e0ebb08458c11315f99b6e0b3ebfae47612b): shared_rcp branch: raybox-zero@shared_rcp submodule
 
 | | 4x2:1 | 8x2:1 | 4x2:2 | 8x2:2 | 4x2:3 | 8x2:3 | 4x2:4 | 8x2:4 |
 |-|-:|-:|-:|-:|-:|-:|-:|-:|
@@ -30,9 +30,22 @@ Summary:
 *   4x2:4 is our target, and it nearly fits: Got to get it under 60% utilisation.
 *   25MHz will probably be fine in 4x2, but we're also closer to 50MHz (44MHz so far in 8x2:4).
 
+### With all debug modules baked in (map overlay, debug overlay, trace debug)
+
+### [`3ea9e0e`](https://github.com/algofoogle/tt04-raybox-zero/commit/3ea9e0e?diff=split): shared_rcp branch: raybox-zero@shared_rcp submodule                                                              
+| | 4x2:1 | 8x2:1 | 4x2:2 | 8x2:2 | 4x2:3 | 8x2:3 | 4x2:4 | 8x2:4 |
+|-|-:|-:|-:|-:|-:|-:|-:|-:|
+| cells_pre_abc | 15,672 | 15,672 | 15,672 | 15,672 | 15,659 | 15,659 | 15,672 | 15,672 |
+| TotalCells | 13,248 | 38,199 | 13,248 | 38,147 | 0 | 0 | 11,865 | 37,623 |
+| suggested_mhz | 24.39 | 25.00 | 47.62 | 50.00 | 47.62 | 37.10 | 47.62 | 43.57 |
+| logic_cells | 10,928 | 11,482 | 10,928 | 11,581 | 9,532 | 9,864 | 9,545 | 10,075 |
+| utilisation_% | 75.46 | 37.45 | 75.46 | 37.45 | 62.95 | 31.24 | 62.96 | 31.25 |
+| wire_length_um | 0 | 367,960 | 0 | 370,801 | 0 | 627,200 | 0 | 261,605 |
+
+
 ## Next steps
 
-*   Try hardening with debug signals controlling debug overlays, to see if they notably increase area.
+*   Try hardening with *debug signals controlling* debug overlays, to see if they notably increase area.
 *   Cut back states. There are too many.
 *   Cut back facing/vplane vectors; SPI doesn't need to supply higher order bits.
 *   See if we can reduce multipliers.
@@ -41,8 +54,11 @@ Summary:
 *   Add in `tex` and see how much it blows things out.
 *   Compare cell count when using rcp_in as a register instead of mux -- it might actually be worse by turning into both a register AND a mux in synth.
 *   Combine TraceStep and TraceTest if using combo map ROM. No good if using external ROM.
-*   Try to plan a minimal external ROM interface that doesn't suffer bad SPI speed issues.
-*   Consider designing an extra TT04 tile that just provides a ROM interface of the kind we need (col/row inc/dec).
+*   External ROM ideas:
+    *   Try to plan a minimal external ROM interface that doesn't suffer bad SPI speed issues.
+    *   Consider designing an extra TT04 tile that just provides a ROM interface of the kind we need (col/row inc/dec).
+    *   Remember: Really only need to read 1 bit, or 2 for tri-colour walls... Abort reading at that point (no need to get all 8 bits).
+    *   Address setup is still a problem though if we're reading the map ROM very randomly.
 *   Is there a way to avoid `trackDistY-stepDistY` by holding a previous value?
 *   Move the shared_reciprocal OUT of wall_tracer
 *   Try to get a sense of how big each component/module/register/expression is... harden them all separately or black-box them?
