Update 0139 with baseline harden_test results: height_scaler merged into wall_tracer

--- a/0139-2023-09-01.md
+++ b/0139-2023-09-01.md
@@ -32,7 +32,36 @@
 
 ## Various tests
 
-*   TBC...
+### Baseline: height_scaler merged into wall_tracer FSM using shared_reciprocal
+
+Code:
+*   tt04-raybox-zero: [`6b0e41e`](https://github.com/algofoogle/tt04-raybox-zero/commit/6b0e41e?diff=split): Combo 5 added to harden_test
+    *   Equivalent to: [`7aae611`](https://github.com/algofoogle/tt04-raybox-zero/commit/7aae6113ba657507045dc5032e27ae59020a8336?diff=split): Wire up SPI for fixed pov
+*   src/raybox-zero: [`5408d42`](https://github.com/algofoogle/raybox-zero/commit/5408d42?diff=split): Add in winrand.bat for sim build on Windows
+    *   Equivalent to: [`ff05791`](https://github.com/algofoogle/raybox-zero/commit/ff05791?diff=split): Fix map size parameters
+
+Summary:
+*   Using shared_rcp branch for all
+*   height_scaler already merged into wall_tracer shared_reciprocal
+*   `MAP_*` parameter use fixed in rbzero.v
+*   `TRACE_STATE_DEBUG` option exists, but all such options are disabled (i.e. no map overlay, no debug overlay, no trace state visualisation).
+
+| | 4x2:1 | 8x2:1 | 4x2:2 | 8x2:2 | 4x2:3 | 8x2:3 | 4x2:4 | 8x2:4 | 4x2:5 | 8x2:5 |
+|-|-:|-:|-:|-:|-:|-:|-:|-:|-:|-:|
+| cells_pre_abc | 14,944 | 14,944 | 14,944 | 14,944 | 14,956 | 14,956 | 14,944 | 14,944 | 14,944 | 14,944 |
+| TotalCells | 13,003 | 38,080 | 13,003 | 38,063 | 0 | 0 | 11,528 | 37,229 | 22,082 | 37,106 |
+| suggested_mhz | 24.39 | 25.00 | 47.62 | 50.00 | 47.62 | 39.51 | 47.62 | 42.39 | 25.00 | 25.00 |
+| logic_cells | 10,683 | 11,215 | 10,683 | 11,288 | 9,146 | 9,250 | 9,208 | 9,746 | 9,713 | 9,732 |
+| utilisation_% | 73.25 | 36.35 | 73.25 | 36.35 | 59.77 | 29.66 | 61.63 | 30.59 | 60.51 | 30.03 |
+| wire_length_um | 0 | 334,824 | 0 | 337,985 | 0 | 493,833 | 0 | 252,688 | 239,269 | 249,952 |
+
+Findings:
+*   **Combo 5 fits in 4x2**: 60.51% util out of possible 65%, with 25MHz achieved.
+*   Combo 4 max speed is about 42.4MHz out of target 50MHz.
+*   Typical start cells is ~15k, final ~9.7k
+*   Not sure why synth results are a bit larger than in previous runs. Probably bad luck with yosys randomness from source formatting.
+
+
 
 ## Next steps
 
