--- a/0137-2023-08-30.md
+++ b/0137-2023-08-30.md
@@ -59,9 +59,10 @@ Summary:
     *   Consider designing an extra TT04 tile that just provides a ROM interface of the kind we need (col/row inc/dec).
     *   Remember: Really only need to read 1 bit, or 2 for tri-colour walls... Abort reading at that point (no need to get all 8 bits).
     *   Address setup is still a problem though if we're reading the map ROM very randomly.
-*   Is there a way to avoid `trackDistY-stepDistY` by holding a previous value?
+*   Is there a way to avoid `trackDistY-stepDistY` by holding a previous value? Even a reg (to store a copy) might be less than a sub.
 *   Move the shared_reciprocal OUT of wall_tracer
 *   Try to get a sense of how big each component/module/register/expression is... harden them all separately or black-box them?
+*   SPI access to registers for controlling colours, esp. background.
 
 ## Notes
 
