0142: test008: put a shmul in rcp

--- a/0141-2023-09-03.md
+++ b/0141-2023-09-03.md
@@ -2,7 +2,7 @@
 
 | Previous journal: | Next journal: |
 |-|-|
-| [**0140**-2023-09-02.md](./0140-2023-09-02.md) | *Next journal TBA* |
+| [**0140**-2023-09-02.md](./0140-2023-09-02.md) | [**0142**-2023-09-04.md](./0142-2023-09-04.md) |
 
 # raybox-zero
 
@@ -169,7 +169,7 @@ Findings:
 
 Code:
 *   tt04-raybox-zero: [`70f1a6c`](https://github.com/algofoogle/tt04-raybox-zero/commit/70f1a6c?diff=split): harden_test: Minor update to change parameter order
-    *   Equivalent to: [``](): ?
+    *   Equivalent to: [`7aae611`](https://github.com/algofoogle/tt04-raybox-zero/commit/7aae6113ba657507045dc5032e27ae59020a8336?diff=split): Wire up SPI for fixed pov
 *   src/raybox-zero: [`5cfe6e8`](https://github.com/algofoogle/raybox-zero/commit/5cfe6e8?diff=split): test007: use registered rcp_in instead of mux
 
 Summary:
@@ -205,6 +205,7 @@ Options used:
 | spef_tns | 0.00 | 0.00 | 0.00 | 0.00 | 0.00 | 0.00 | 0.00 | 0.00 | 0.00 | 0.00 |
 
 Findings:
+*   **All hardens complete sucecssfully.**
 *   Compared with test005, combos 1 and 2 are faster, use a little *less* area, and they all complete successfully.
 *   Compared with test005, combos 4 and 5 are faster, and use marginally *more* area.
 *   **NOTE:** In practice, these might not necessarily be faster, because while they reduce the rcp's combo chain length, the rcp already has an extra wait state in the wall_tracer FSM, so it's probably fast enough this way anyway.
