--- a/0142-2023-09-04.md
+++ b/0142-2023-09-04.md
@@ -64,11 +64,12 @@ Findings:
 *   Try using `tex` -- shared multiplier? Implement actual texture rendering.
     *   Do it on both the latest/greatest test00X branch and on original shared_rcp branch.
 *   Smaller view vectors.
-*   Actively ditch rcp's sat and abs logic?
+*   Actively ditch rcp's sat and abs logic? Do we actually need the sign bit for rcp?
 *   Check warnings.
 
 ## Later
 
+*   Try building a full state machine for all multiplies/reciprocals.
 *   Test on FPGA
 *   See what LZC24 actually synthesises to
 *   IRQs
