Update 0143 to describe findings of test009-2, -3, and -4

--- a/0143-2023-09-05.md
+++ b/0143-2023-09-05.md
@@ -56,8 +56,11 @@ Options used:
 | spef_wns | 0.00 | 0.00 | 0.00 | 0.00 | 0.00 | 0.00 | -0.96 | -0.93 | 0.00 | 0.00 |
 | spef_tns | 0.00 | 0.00 | 0.00 | 0.00 | 0.00 | 0.00 | -43.33 | -43.89 | 0.00 | 0.00 |
 
-Findings:
-*   **TBC**
+Findings ([compared to test005](./0141-2023-09-03.md#test005-copy-of-trying-shared-multiplier-for-trackinit)):
+*   **All combos now synth**.
+*   **4x2:5 util reduces from 48.86% to 43.57%**
+*   4x2:2 can now reach 50MHz (up from 47.62)
+*   Combo 4 is now *closer* to 50MHz (up to ~47.7 from ~45.5)
 
 
 ### test009-3: restrict pov output bits to typical minimum (Q7.9 and Q2.9)
@@ -103,8 +106,9 @@ Options used:
 | spef_wns | 0.00 | 0.00 | 0.00 | 0.00 | 0.00 | 0.00 | -0.53 | -0.61 | 0.00 | 0.00 |
 | spef_tns | 0.00 | 0.00 | 0.00 | 0.00 | 0.00 | 0.00 | -18.35 | -25.46 | 0.00 | 0.00 |
 
-Findings:
-*   **TBC**
+Findings (compared to test009-2 above):
+*   **4x2:5 util reduces from 43.57% to 41.35%**
+*   Combo 4 speed improvement (up to ~48.5MHz from ~47.7)
 
 
 ### test009-4: pov SPI takes 74b: UQ6.9 for playerX/Y, SQ2.9 for others
@@ -151,9 +155,9 @@ Options used:
 | spef_wns | 0.00 | 0.00 | 0.00 | 0.00 | 0.00 | 0.00 | -1.28 | -1.42 | 0.00 | 0.00 |
 | spef_tns | 0.00 | 0.00 | 0.00 | 0.00 | 0.00 | 0.00 | -65.45 | -75.88 | 0.00 | 0.00 |
 
-Findings:
-*   **TBC**
-
+Findings (compared to test009-3 above):
+*   **4x2:5 util reduces from 41.35% to 39.33%**
+*   Combo 4 speed is *worse* (down to ~46.7MHz from ~48.5)
 
 
 ## Accomplishments
@@ -168,6 +172,7 @@ Findings:
 
 ## Next steps
 
+*   Try a 2x2 tile size with 82% util target?
 *   See if there is some cheap effect we can do with wall/ceiling.
 *   Try running on FPGA at a slower (or faster) clock.
 
@@ -181,3 +186,4 @@ Findings:
 *   Look for `@@@`, `SMELL`s, `TODO`s, etc.
 *   Test on FPGA
 *   Configurability (e.g. VGA timing alts)
+*   Check antennas and other reports e.g. fanout.
