Update 0143 with GDS image of 2x2 and comments on power

--- a/0143-2023-09-05.md
+++ b/0143-2023-09-05.md
@@ -211,7 +211,37 @@ Options used:
 Findings:
 *   **2x2:5 SUCCEEDS at 25MHz with ~80% utilisation**
 
+![GDS hardens test009-4 combo 5 (25MHz) at 2x2 tile size](./i/0143-gds-2x2.png)
 
+NOTE:
+*   I'm not clear on whether 80% utilisation is OK for TT04. [Here](https://discord.com/channels/1009193568256135208/1009473432834035732/1143529029576695808) Uri thought 88% was OK for 1x1? [Matt just confirmed that 80% for a 2x2 is acceptable for TT04](https://discord.com/channels/1009193568256135208/1016726411400200292/1148505571549511711).
+*   How much power will this consume in normal operation?
+    *   `metrics.csv` suggests 0.236&micro;W for typical switching, where it is written as `uW`:
+        ```
+         power_typical_internal_uW :    0.172
+        power_typical_switching_uW :    0.236
+          power_typical_leakage_uW : 2.84e-08
+        ```
+    *   ...but it's confusing because it says these figures are in **watts** in `runs/wokwi/reports/signoff/31-rcx_sta.power.rpt`:
+        ```
+        ===========================================================================
+        report_power
+        ============================================================================
+        ======================= Typical Corner ===================================
+
+        Group                  Internal  Switching    Leakage      Total
+                                  Power      Power      Power      Power (Watts)
+        ----------------------------------------------------------------
+        Sequential             6.50e-04   1.62e-04   3.72e-09   8.12e-04   0.2%
+        Combinational          1.71e-01   2.35e-01   2.47e-08   4.07e-01  99.8%
+        Macro                  0.00e+00   0.00e+00   0.00e+00   0.00e+00   0.0%
+        Pad                    0.00e+00   0.00e+00   0.00e+00   0.00e+00   0.0%
+        ----------------------------------------------------------------
+        Total                  1.72e-01   2.36e-01   2.84e-08   4.08e-01 100.0%
+                                  42.2%      57.8%       0.0%
+        ```
+    *   So which is right? 0.236&micro;W or 0.236W, because the latter could be bad, especially if the *total* is ~408mW in such a small area (~339x226um)
+*   Power in normal use, however, might be nowhere near this bad... the bulk of switching might stop at the end of each line trace, which could be as little as 10% in... and in fact the heavy switching for calculating multiplication and reciprocals might be more like 1% of the time.
 
 ## Accomplishments
 
@@ -225,6 +255,7 @@ Findings:
 
 ## Next steps
 
+*   Try Q9.9 (or even Q8.10 or Q8.9) for all of our actual internal fixed-point stuff instead of Q12.12.
 *   See if there is some cheap effect we can do with wall/ceiling.
 *   Try running on FPGA at a slower (or faster) clock.
 
