Minor update to 0143

--- a/0143-2023-09-05.md
+++ b/0143-2023-09-05.md
@@ -252,6 +252,8 @@ NOTE:
     *   Sim updated to suit.
 *   In sim, CTRL+up/down will increase/decrease 'facing' vector scaling, in the range (0.01,1.99). This narrows/widens FOV.
 *   In sim, CTRL+right/left increases/decreases 'vplane' vector scaling, in the range (0.01,1.99). This widens/narrows apparent aspect ratio.
+*   Merged test009 experiment into main line via [PR#1](https://github.com/algofoogle/raybox-zero/pull/1)
+*   <kbd>P</kbd> key in sim can now toggle rotation of the display by 90 degrees.
 
 ## Next steps
 
