Add 0145 (Notes during TT04 final submission) and update 0143, 0144

--- a/0143-2023-09-05.md
+++ b/0143-2023-09-05.md
@@ -468,6 +468,7 @@ Findings:
 ## Next steps
 
 *   See if there is some cheap effect we can do with wall/ceiling.
+*   Remove o_sat and i_abs (make it always absolute) from reciprocal and see if it makes any difference to area.
 *   Try running on FPGA at a slower (or faster) clock.
 
 ## Notes
@@ -484,3 +485,7 @@ Findings:
 *   Test on FPGA
 *   Configurability (e.g. VGA timing alts)
 *   Check antennas and other reports e.g. fanout.
+*   Check [possible saturation check error in reciprocal](https://github.com/algofoogle/raybox-zero/blob/b4dc3cb855a0aca4901be960c2d8dec7310843e7/src/rtl/reciprocal.v#L108-L112)
+*   Create libre textures that vary colour.
+*   tt04-solo-squash with SPI
+*   Registered outputs. Could that just be in the TT04 wrapper?
